queXS 1.19.1 - Changes since 1.19.0

*New feature: Integration with newer version of Limesurvey (> 2.0) - Thanks Benedikt!

*Fixed bug: Can't import PDF files with uppercase extension

queXS 1.19.0 - Changes since 1.18.2

*New feature: Refer to supervisor function
*New feature: Review of results overlay function
*New feature: Web based upload function

*Directory changes required:

mkdir scans
chown www-data:www-data scans
Use .htaccess to protect the uploads and scans directory

Example .htaccess file:
order deny,allow
deny from all

*Database changes required:

CREATE TABLE IF NOT EXISTS `supervisorquestionnaire` (
  `vid` smallint(5) unsigned NOT NULL,
  `qid` int(10) unsigned NOT NULL,
  PRIMARY KEY (`vid`,`qid`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;

queXF 1.18.2 - Changes since 1.18.1

*Added support for PHP 7 and MySQL 5.7
*Fixed bug: Can't search by Varname

*Database changes required (only if support for Mysql 5.7 required):

ALTER TABLE boxgroupstype MODIFY COLUMN sortorder INT(11) NOT NULL DEFAULT '1';

queXF 1.18.1 - Changes since 1.18.0

*New feature: Allow for gaps in boxes due to dithering (default width is 3 pixels)
*New feature: Add filename to output
*New feature: Import images as grayscale to avoid Ghostscripts dithering 
*New feature: New configuration item IMAGE_THRESHOLD to determine cutoff to monochrome
*New feature: Allow for barcode/OCR fields to be verified

*Fixed bug: Set default output width of text field to 1024
*Fixed bug: Update variable width automatically when editing labels
*Fixed bug: Update box detection to handle minimum width better 
*Fixed bug: Add UTF-8 encoding for correct translations

*Updated translations - thank you for contributing!

queXF 1.18.0 - Changes since 1.17.0

*New Feature: Don't use manual page setup by default as doesn't handle page scaling
*New Feature: Variable labelling when banding

*Fixed Bug: lp:1475507 Manual page setup doesn't take into account scaling of scanned document